--- a/.coder/ubuntu-angular.yaml
+++ b/.coder/ubuntu-angular.yaml
@@ -2,9 +2,9 @@ version: 0.2
 workspace:
   # Type indicates the provider type to use when building the workspace.
   # It corresponds to the `kubernetes` section under `specs`.
-  type: kubernetes
+  type: docker
   specs:
-    kubernetes:
+    docker:
       image:
         value: index.docker.io/ubuntu:18.04
       container-based-vm:
